==> snbkzqll/open-source-projects/加热台（已完结）/烧录工具/最新固件22-5-6/ESP8266/src/Oled.cpp <==
#include "Oled.h"

void write_oled(unsigned char dat,unsigned char mode) //根据不同平台更改IIC或SPI发送函数
{
  /* ***********IIC*************************/
  Wire.beginTransmission(Oled_SLAVE);//开始IIC并写物理地址
  if(mode)//判断是指令还是数据
  {
    Wire.write(0x40);
  }
  else
  {
    Wire.write(0x00);
  }
  Wire.write(dat);//写数据
  Wire.endTransmission();//结束
  /**************************************/
  
  /* ***********SPI*************************/
//  OLED_CS_CLR;
//  if(mode){OLED_DC_SET;}else{OLED_DC_CLR;}
//  write_oled(dat);//写数据
//  OLED_CS_SET;
  /**************************************/

}

void Oled::refresh()
{
  unsigned char i,n; 
  unsigned char *p = &Oled_GRAM[0][0]; 

  #if WRITE_MODE
  {
    for(i=0;i<PAGE_SIZE;i++)  
    {    
      oled_set_pos(0,i);
      Wire.beginTransmission(Oled_SLAVE);//开始IIC并写物理地址
      Wire.write(0x40);
      for(n=0;n<WIDTH;n++)
      {
        
         Wire.write(*p++);//写数据
      }
      Wire.endTransmission(1);//结束
    }   //更新显示
  }
  #else
  {
    for(i=0;i<PAGE_SIZE;i++)  
    {    
      oled_set_pos(0,i);
      for(n=0;n<WIDTH;n++)
      {
         write_oled(*p++,OLED_DATA);
      }
    }   //更新显示
  }
  #endif

}

void Oled::choose_refresh(unsigned char x,unsigned char y,unsigned char width, unsigned char height)
{
  unsigned char i,n; 
  unsigned char *p;
  if((height+y)>PAGE_SIZE)
    return;
  #if WRITE_MODE
  {
    for(i=0;i<height;i++)  
    {    
      oled_set_pos(x,y+i);
      p=&Oled_GRAM[y+i][x];
      Wire.beginTransmission(Oled_SLAVE);//开始IIC并写物理地址
      Wire.write(0x40);
      for(n=0;n<width;n++)
      {
        Wire.write(*p++);//写数据
      }
      Wire.endTransmission(1);//结束
    }   //更新显示
  }
  #else
  {
    for(i=0;i<height;i++)  
    {    
      oled_set_pos(x,y+i);
      p=&Oled_GRAM[y+i][x];
      for(n=0;n<width;n++)
      {
        write_oled(*p++,OLED_DATA);
      }
    }   //更新显示
  }
  #endif
}
