==> goodhomeire/ESP/components/oled/oled.cpp <==
#include "oled.h"
#include "driver/i2c.h"
#include <freertos/FreeRTOS.h>
#include <freertos/task.h>

void write_oled(uint8_t dat,uint8_t mode)
{
    i2c_cmd_handle_t handle = i2c_cmd_link_create();
    i2c_master_start(handle);
    i2c_master_write_byte(handle,OLED_ADDR<<1|I2C_MASTER_WRITE,1);  
    if(mode)
    {
        i2c_master_write_byte(handle,0x40,1);
    }
    else
    {
        i2c_master_write_byte(handle,0x00,1);

    }
    i2c_master_write_byte(handle,dat,1);
    i2c_master_stop(handle);
    i2c_master_cmd_begin(I2C_NUM_0,handle,1000/portTICK_PERIOD_MS);
    i2c_cmd_link_delete(handle);
}

void Oled::refresh()
{
    uint8_t i, n;
    uint8_t *p = &Oled_GRAM[0][0];
    
    for (i = 0; i < PAGE_SIZE; i++)
    {
        oled_set_pos(0, i); 
        i2c_cmd_handle_t handle = i2c_cmd_link_create();
        i2c_master_start(handle);
        i2c_master_write_byte(handle, OLED_ADDR << 1 | I2C_MASTER_WRITE, 1);
        i2c_master_write_byte(handle, 0x40, 1);
        for (n = 0; n < WIDTH; n++)
        {
            i2c_master_write_byte(handle, *p++, 1);
        }
        i2c_master_stop(handle);
        i2c_master_cmd_begin(I2C_NUM_0, handle, 1000 / portTICK_PERIOD_MS);
        i2c_cmd_link_delete(handle);
    }                          // 更新显示
}

void Oled::choose_refresh(uint8_t x, uint8_t y, uint8_t width, uint8_t height)
{
    uint8_t i, n;
    uint8_t *p;
    if((height+y)>PAGE_SIZE)
       return;
    for (i = 0; i < height; i++)
    {
        p = &Oled_GRAM[y + i][x];
        oled_set_pos(x, y + i);
        i2c_cmd_handle_t handle = i2c_cmd_link_create();
        i2c_master_start(handle);
        i2c_master_write_byte(handle, OLED_ADDR << 1 | I2C_MASTER_WRITE, 1);
        i2c_master_write_byte(handle, 0x40, 1);
        for (n = 0; n < width; n++)
        {
            i2c_master_write_byte(handle, *p++, 1);
        }
        i2c_master_stop(handle);
        i2c_master_cmd_begin(I2C_NUM_0, handle, 1000 / portTICK_PERIOD_MS);
        i2c_cmd_link_delete(handle);
    }
}
